--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="./assets/images/Rodrigo Cruz Headshot.png" height="300" alt="Headshot Rodrigo Cruz" />
     <hr />
     <h2>Summary</h2>
-        <p>Former Architect focused on interior and exterior lighting design, self-taught graphic designer with work experience in the USA, classicaly trained singer with performances in 3 continents, and Web Developer on the making.</p>
+        <p>Former Architect focused on interior and exterior lighting design, self-taught graphic designer with work experience in the USA, classically trained singer with performances in 3 continents, and Web Developer in the making.</p>
     <hr />
     <h2>Education</h2>
         <ul>
@@ -29,7 +29,7 @@
                 <ul>
                     <li>Elaborated flyers and posters for events on Campus.</li>
                     <li>Updated Education Abroad's Office website regularly with news, images, etc.</li>
-                    <li>Provided support on Campus' events with information for students/visitors.</li>
+                    <li>Provided support on Campus events with information for students/visitors.</li>
                 </ul>
             <br />
         <li><strong>Graphic Designer</strong> (Graduate Assistant) at Center for Global Engagement at ISU
@@ -38,14 +38,14 @@
                 <ul>
                     <li>Elaborated flyers and posters for events on Campus.</li>
                     <li>Engaged regularly with international students from ISU.</li>
-                    <li>Provided support on Campus' events.</li>
+                    <li>Provided support on Campus events.</li>
                 </ul>
             <br />
         <li><strong>Freelance Voice Performer</strong>
             <p>2012 - today</p>
             </li>
                 <ul>
-                    <li>Performed as soloist in Operas in Brazil, Paraguay, and Germany.</li>
+                    <li>Performed as a soloist in Operas in Brazil, Paraguay, and Germany.</li>
                     <li>Won prizes in music competitions in Brazil and the USA.</li>
                     <li>Performed in concerts in Brazil, Germany, Austria, and the USA.</li>
                 </ul>
@@ -54,7 +54,7 @@
             <p>2015 - 2018</p>
             </li>
                 <ul>
-                    <li>Assisted on the development and execution of lighting design projects.</li>
+                    <li>Assisted in the development and execution of lighting design projects.</li>
                     <li>Contacted clients and product providers.</li>
                     <li>Attend meetings with clients and visit construction sites.</li>
                 </ul>
@@ -63,7 +63,7 @@
             <p>2010 - 2014</p>
             </li>
                 <ul>
-                    <li>Assisted on the development and execution of lighting design projects.</li>
+                    <li>Assisted in the development and execution of lighting design projects.</li>
                     <li>Contacted clients and product providers.</li>
                     <li>Trained new employees.</li>
                 </ul>
