--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Rodrigo da Cruz Silveira</h1>
-        <h2>Web Developer</h2>
+        <h2>Resume</h2>
         <img src="./assets/images/Rodrigo Cruz Headshot.png" height="300" alt="Headshot Rodrigo Cruz" />
     <hr />
     <h2>Summary</h2>
@@ -14,7 +14,7 @@
     <hr />
     <h2>Education</h2>
         <ul>
-            <li><strong>Full Stack Web Development</strong> - Udemy (2024)</li>
+            <li><strong>Introduction to Front-End Development</strong> - Meta (2024)</li>
             <li><strong>Master of Music, Voice Performance </strong>- Indiana State University - ISU (2018-2020)</li>
             <li><strong>Certificate in Classical Singing </strong>- Music Conservatory of Pernambuco (2011-2014)</li>
             <li><strong>Certificate in Interior and Light Design </strong>- Institute of Under- and Graduate Studies of Goiania (2010-2013)</li>
@@ -23,13 +23,22 @@
     <hr />
     <h2>Work Experience</h2>
         <p><ul>
+            <li><strong>Warehouse worker</strong> at Flaschenpost
+                <p>2022 - Today</p>
+                </li>
+                    <ul>
+                        <li>Prepare client orders accordingly following current procedures.</li>
+                        <li>Updated Education Abroad's Office website regularly with news, images, etc.</li>
+                        <li>Provided support on Campus' events with information for students/visitors.</li>
+                    </ul>
+                <br />
         <li><strong>Graphic and Web Designer</strong> (Graduate Assistant) at Education Abroad Office at ISU
             <p>2019 - 2020</p>
             </li>
                 <ul>
                     <li>Elaborated flyers and posters for events on Campus.</li>
                     <li>Updated Education Abroad's Office website regularly with news, images, etc.</li>
-                    <li>Provided support on Campus events with information for students/visitors.</li>
+                    <li>Provided support on Campus' events with information for students/visitors.</li>
                 </ul>
             <br />
         <li><strong>Graphic Designer</strong> (Graduate Assistant) at Center for Global Engagement at ISU
@@ -38,14 +47,14 @@
                 <ul>
                     <li>Elaborated flyers and posters for events on Campus.</li>
                     <li>Engaged regularly with international students from ISU.</li>
-                    <li>Provided support on Campus events.</li>
+                    <li>Provided support on Campus' events.</li>
                 </ul>
             <br />
         <li><strong>Freelance Voice Performer</strong>
             <p>2012 - today</p>
             </li>
                 <ul>
-                    <li>Performed as a soloist in Operas in Brazil, Paraguay, and Germany.</li>
+                    <li>Performed as soloist in Operas in Brazil, Paraguay, and Germany.</li>
                     <li>Won prizes in music competitions in Brazil and the USA.</li>
                     <li>Performed in concerts in Brazil, Germany, Austria, and the USA.</li>
                 </ul>
@@ -54,7 +63,7 @@
             <p>2015 - 2018</p>
             </li>
                 <ul>
-                    <li>Assisted in the development and execution of lighting design projects.</li>
+                    <li>Assisted on the development and execution of lighting design projects.</li>
                     <li>Contacted clients and product providers.</li>
                     <li>Attend meetings with clients and visit construction sites.</li>
                 </ul>
@@ -63,7 +72,7 @@
             <p>2010 - 2014</p>
             </li>
                 <ul>
-                    <li>Assisted in the development and execution of lighting design projects.</li>
+                    <li>Assisted on the development and execution of lighting design projects.</li>
                     <li>Contacted clients and product providers.</li>
                     <li>Trained new employees.</li>
                 </ul>
@@ -71,12 +80,12 @@
     <hr />
     <h2>Skills</h2>
         <ul>
-            <li>HTML:&emsp;★★★☆☆</li>
-            <li>XXXXXX:&emsp;★★★☆☆</li>
-            <li>XXXXXX:&emsp;★★★☆☆</li>
-            <li>Visual Studio Code:&emsp;★★★★☆</li>
-            <li>Microsoft Office Suite:&emsp;★★★☆☆</li>
             <li>Organizational Skills:&emsp;★★★★☆</li>
+            <li>Communication Skills:&emsp;★★★★★</li>
+            <li>Computer Skills:&emsp;★★★★★</li>
+            <li>Microsoft Office Suite:&emsp;★★★☆☆</li>
+            <li>HTML:&emsp;★★★☆☆</li>
+            <li>Visual Studio Code:&emsp;★★★★☆</li>
             <li>Adobe Illustrator:&emsp;★★★★☆</li>
             <li>Adobe Photoshop:&emsp;★★★☆☆</li>
             <li>CorelDRAW:&emsp;★★★★☆</li>
@@ -92,11 +101,11 @@
         <ul>
             <li>Portuguese:&emsp;★★★★★ Native</li>
             <li>English:&emsp;★★★★☆ Fluent</li> 
-            <li>German:&emsp;★★★☆☆ Proficient</li>
+            <li>German:&emsp;★★★☆☆ Proficient (B2)</li>
             <li>Spanish:&emsp;★★★☆☆ Proficient</li>
         </ul>
     <hr />
-    <a href="./public/about.html">About Me</a>&emsp;<a href="./public/contact.html">Contact Me</a>
+    <a href="./public/contact.html">Contact Me</a>
     </p>
     <footer>© Rodrigo Cruz. All rights reserved.</footer>
 </body>
